fix homepage grid width on safari

--- a/working-assets/css/gender-categories.css
+++ b/working-assets/css/gender-categories.css
@@ -24,8 +24,14 @@
   }
 }
 
+.womens-gender-filter,
+.mens-gender-filter {
+  width: 100%;
+}
+
 .category-grid {
   max-width: 90vw;
+  width: 100%;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
